# ai-report-analyzer

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_report_analyzer/app/: main.py
ai_report_analyzer/app/ai_integration/: gemini_client.py
ai_report_analyzer/app/config/: settings.py
ai_report_analyzer/app/dashboard/: streamlit_app.py
ai_report_analyzer/app/database/: connection.py  models.py
ai_report_analyzer/app/ingestion/: loader.py
ai_report_analyzer/app/processing/: aggregator.py
ai_report_analyzer/tests/: test_main.py
