[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "fastapi"
    "uvicorn"
    "sqlalchemy"
    "psycopg2-binary"
    "pandas"
    "google-generativeai"
    "python-dotenv"
    "pydantic"
    "streamlit"
    "plotly"
    "requests"
]

[tool.setuptools.packages.find]
where = ["ai_report_analyzer"]